--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.UINAMFind">
         <activity
+            android:name=".ui.ukm.DetailUkmActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.loker.LokerActivity"
             android:exported="false" />
         <activity
@@ -79,7 +82,7 @@
             android:name=".ui.mahasiswa.MahasiswaActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.toko.TokoActivity"
+            android:name=".ui.market.MarketActivity"
             android:exported="false" />
         <activity
             android:name=".ui.tamu.PertanyaanPendaftaran4Activity"
@@ -107,8 +110,7 @@
             android:exported="false" />
         <activity
             android:name=".ui.MainActivity"
-            android:exported="true">
-        </activity>
+            android:exported="true" />
     </application>
 
 </manifest>
