--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     package="com.azwar.uinamfind">
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -13,6 +13,12 @@
         android:roundIcon="@mipmap/ic_launcher_uinamfind_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.UINAMFind">
+        <activity
+            android:name=".ui.saya.organisasi.EditOrganisasiMahasiswaActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.saya.organisasi.ListOrganisasiMahasiswaActivity"
+            android:exported="false" />
         <activity
             android:name=".ui.saya.EditProfilMahasiswaActivity"
             android:exported="false" />
@@ -60,8 +66,7 @@
             android:exported="false" />
         <activity
             android:name=".ui.SplashActivity"
-            android:exported="true">
-        </activity>
+            android:exported="true" />
         <activity
             android:name=".ui.chat.RoomChatActivity"
             android:exported="false" />
@@ -103,15 +108,13 @@
             android:exported="false" />
         <activity
             android:name=".ui.login.LoginMahasiswaActivity"
-            android:exported="true" >
-        </activity>
+            android:exported="true" />
         <activity
             android:name=".ui.MasukActivity"
             android:exported="false" />
         <activity
             android:name=".ui.MainActivity"
-            android:exported="true" >
-
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
