--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,4 +87,7 @@ dependencies {
     // Allert
     implementation 'com.github.f0ris.sweetalert:library:1.5.6'
 
+    // Numberpicker
+    implementation 'io.github.ShawnLin013:number-picker:2.4.13'
+
 }
