--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,4 +90,8 @@ dependencies {
     // Numberpicker
     implementation 'io.github.ShawnLin013:number-picker:2.4.13'
 
+    //glide
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+
 }
