--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,11 +10,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2.4.2
+        uses: actions/checkout@v3
       - name: Setup JDK
-        uses: actions/setup-java@v3.4.1
+        uses: actions/setup-java@v3
         with:
-          java-version: 1.8
+          distribution: 'temurin' # See 'Supported distributions' for available options
+          java-version: '17'
       - name: Build with Gradle
         run: ./gradlew build
       - name: Upload APK
