--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,16 +11,21 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+
       - name: Setup JDK
         uses: actions/setup-java@v3
         with:
           distribution: 'temurin' # See 'Supported distributions' for available options
           java-version: '17'
+
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
+
       - name: Build with Gradle
         run: ./gradlew build
+
       - name: Upload APK
         uses: actions/upload-artifact@v3.1.0
         with: 
           name: app
           path: app/build/outputs/apk/debug/app-debug.apk
-      
