--- a/app/build.gradle
+++ b/app/build.gradle
@@ -100,4 +100,7 @@ dependencies {
     // Mention TextView
     implementation 'com.github.noah20:mentions-textview:1.0.2'
 
+    // ZoominImageView
+    implementation 'com.github.chrisbanes:PhotoView:2.2.0'
+
 }
