--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="m">
         <activity
+            android:name=".ui.PreviewPhotoActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.kegiatan.DetailKegiatanActivity"
             android:exported="false" />
         <activity
